--- a/js/react/redux_for_beginners_v1/package.json
+++ b/js/react/redux_for_beginners_v1/package.json
@@ -2,11 +2,17 @@
   "name": "redux-tutorial-v1",
   "version": "1.0.0",
   "description": "Redux tutorial. v1",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "Fe-Nik-S",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "express": "^4.13.4",
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4"
+  }
 }
